Launch Urban Terror works, as long as you have gamepath set in your properties file.
E.g.
gamepath=D:\\Games\\UrbanTerror\\ioUrbanTerror.exe

Only tested so far on Windows platforms. Back slashes need to be doubled up on Windows too.